# mstd

./: .gitignore  LICENSE  README.md  hdd.rar  list.txt  pins.txt
HW/: bitpk.py
HW/test-simple/: test1.rdf
mstd/: #auto_saved_files#  bom.csv  cpu.kicad_sch  fp-info-cache  fp-lib-table  io.kicad_sch  mstd.kicad_pcb  mstd.kicad_prl  mstd.kicad_pro  mstd.kicad_sch  pdn.kicad_sch  pup.kicad_sch  pwr.kicad_sch  sym-lib-table
mstd/3D/: 09722646801.stp
mstd/footprints.pretty/: 09031646951.kicad_mod  09722642801-1.kicad_mod  09722642801.kicad_mod  DD_DC.kicad_mod  ESP32-WROOM-32E-N8.kicad_mod  HW-111.kicad_mod  IRM-10-5.kicad_mod  KS_6_ADI-L.kicad_mod  KS_6_ADI-M.kicad_mod  KS_6_ADI.kicad_mod  LCD.kicad_mod  P2.kicad_mod  SDD1306-1.kicad_mod  SDD1306.kicad_mod  snp15.kicad_mod
mstd/symbols/: ADM1085AKSZ.kicad_sym  ESP32.kicad_sym  IRM10.kicad_sym  local.kicad_sym  local1.kicad_sym
soft/bootloader/: CMakeLists.txt  partitions_mstdp.csv  sdkconfig
soft/bootloader/main/: CMakeLists.txt  common.h  hardware.cpp  hardware.h  main.cpp  pins.h  sd1306.cpp  sd1306.h  setup_data.cpp  setup_data.h  wifi_module.cpp  wifi_module.h
soft/bootloader/main/tftp/include/: tftp_ota_server.h
soft/bootloader/main/tftp/src/: tftp_ota_server.cpp  tftp_server.cpp
soft/cfg_compiler/: mstd.cfg.py  setup_data.h
soft/test-hw/: CMakeLists.txt  partitions_mstdp.csv  sdkconfig
soft/test-hw/main/: CMakeLists.txt  common.h  hardware.cpp  hardware.h  main.cpp  pins.h
